@@ -57,7 +57,7 @@ test_that("bart fit adds extra defaults", {
 # commenting this out until more control over how long the crossvalidation runs is baked in
 if (FALSE) test_that("xbart fit matches manual call", {
   set.seed(22)
-  res <- bartCause:::getBartTreatmentFit(z, x, testData, n.chains = 1L, n.threads = 1L, n.burn = 25, n.samples = 75, n.trees = 25L, crossvalidateBinary = TRUE)
+  res <- bartCause:::getBartTreatmentFit(z, x, testData, n.chains = 1L, n.threads = 1L, n.burn = 25, n.samples = 75, n.trees = 25L, crossvalidate = "trt")
   set.seed(22)
   k <- c(0.5, 1, 2, 4, 8)
   xVal <- dbarts::xbart(z ~ x, testData, k = k, n.threads = 1L, n.burn = 25, n.samples = 75, n.trees = 25L, n.reps = 10L, verbose = FALSE)
